2011-01-29  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Reimplement `twittering-tinyurl-get' with
	`twittering-send-http-request'.
	(twittering-url-wrapper): removed.
	(twittering-url-insert-file-contents): removed.
	(twittering-url-retrieve-synchronously): removed.
	(twittering-tinyurl-get): reimplemented with
	`twittering-send-http-request'. In addition, the query parameter
	is correcly encoded by `twittering-percent-encode'.

	* twittering-mode.el: Add `is.gd' as a URL shortening service.
	Thanks to Michael Kohl.
	(twittering-tinyurl-service): update the document.
	(twittering-tinyurl-services-map): add an entry for `is.gd'.

	* twittering-mode.el: Extend the format of
	`twittering-tinyurl-services-map'. One can register a service that
	requires a special HTTP request and/or post-processing.
	(twittering-tinyurl-services-map): extend the meaning of the
	variable.
	(twittering-tinyurl-get): support new format of
	`twittering-tinyurl-services-map'.

	* twittering-mode.el: Add `goo.gl' as a URL shortening service.
	(twittering-tinyurl-services-map): add an entry for `goo.gl'.

	* twittering-mode.el: Add `bit.ly' and `j.mp' as URL shortening
	services. Thanks to Lars Gregori.
	(twittering-tinyurl-services-map): add entries for `bit.ly' and
	`j.mp'.
	(twittering-bitly-login): new variable.
	(twittering-bitly-api-key): new variable.
	(twittering-make-http-request-for-bitly): new function.

	* twittering-mode.el: Reimplement normalization of alists from XML
	structure.
	(twittering-atom-xmltree-to-status-datum): change the value
	corresponding to the key `source' into a URL with a tag.
	(twittering-status-to-status-datum): removed.
	(twittering-normalize-raw-status): new function to generate
	normalized alist representing a tweet.
	(twittering-xmltree-to-status): use
	`twittering-normalize-raw-status' instead of
	`twittering-status-to-status-datum'.

	* twittering-mode.el: `twittering-make-clickable-status-datum'
	does not redefine `source'.